# HuaweiLittleCar

./: 智能小车实验报告.docx
Huawei/DevEco-Device-Tool/: privacy_statement.txt  user_agreement.txt  version_full.json
Huawei/DevEco-Device-Tool/core/: feature-toggling-manifest.json  log.ini  setenv.bat
Huawei/DevEco-Device-Tool/core/deveco-home/: README.md  package.json
Huawei/DevEco-Device-Tool/core/deveco-venv/: pyvenv.cfg
Huawei/DevEco-Device-Tool/core/deveco-venv/Scripts/: activate  activate.bat  bottle.py  hos-cli.cmd  readelf.py
Huawei/DevEco-Device-Tool/core/tool_hpm/: .eslintrc.js  README.md  README_ZH.md  hpm-debug-build.js  package.json
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/: config.json  main.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/commands/: build.js  checkUpdate.js  code.js  config.js  distribute.js  download.js  extract.js  fetch.js  generateKeys.js  index.js  init.js  install.js  lang.js  list.js  pack.js  publish.js  run.js  script.js  search.js  ui.js  uninstall.js  update.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/constant/: constant.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/core/: bundle-cache.js  bundle-lock.js  bundle.js  crypto.js  dependency-graph.js  dependency.js  helpers.js  local-repository.js  log.js  login.js  manifest.js  preference.js  rc-parser.js  remote-repository.js  repository.js  template.js  variable.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/i18n/: index.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/i18n/res/: en.js  zh.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/plugin/: i18nAPI.js  pluginAPI.js  register.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/thread/: buildEntry.js
Huawei/DevEco-Device-Tool/core/tool_hpm/lib/utils/: api.js  axios.js  config.js  events.js  helpers.js  logHelpers.js  state.js  tasks.js  trace.js
Huawei/DevEco-Device-Tool/core/tool_openjdk_jre/: package.json
Huawei/DevEco-Device-Tool/core/tool_trace/: package.json
Huawei/DevEco-Device-Tool/core/tool_utils/: dependent_tools.json  distribution_bundles.json  download_tools.py  openharmony_info.json  package.json  repo_board_manifest.xml  upload_tools.json  url_define.json
Huawei/DevEco-Device-Tool/core/tool_utils/scaffold/1.x/device/sdk_liteos/: config.gni
Huawei/DevEco-Device-Tool/core/tool_utils/scaffold/1.x/product/: BUILD.gn  config.json
Huawei/DevEco-Device-Tool/core/tool_utils/scaffold/3.x/device/: BUILD.gn
Huawei/DevEco-Device-Tool/core/tool_utils/scaffold/3.x/product/: config.json
Huawei/DevEco-Device-Tool/plugins/: deveco-device-tool-3.1.400.vsix  deveco-device-tool-debug-3.1.400.vsix  deveco-device-tool-remote-3.1.400.vsix
hi3861/: Huawei.lnk
hi3861/src/: ohos_config.json
hi3861/src/applications/sample/wifi-iot/app/: BUILD.gn
hi3861/src/applications/sample/wifi-iot/app/07_gpiobutton/: button_example.c
hi3861/src/applications/sample/wifi-iot/app/1.0/: final_test.c  ultrasonic.h
hi3861/src/applications/sample/wifi-iot/app/1.1/1.1/: BUILD.gn  car_test.c  car_test.h  final_test.c  motor.c  servo.h  udp_test.c  udp_test.h
hi3861/src/applications/sample/wifi-iot/app/OurDemo1/: BUILD.gn  funcs.c  iot_gpio_ex.h  main.c
hi3861/src/applications/sample/wifi-iot/app/OurDemo2/: BUILD.gn  main.c
hi3861/src/applications/sample/wifi-iot/app/handsomebai_version/: BUILD.gn  bai_car.c  bai_car.h
hi3861/src/applications/sample/wifi-iot/app/helloworld/: BUILD.gn  helloworld_demo.c
hi3861/src/applications/sample/wifi-iot/app/iothardware/: led_example.c
hi3861/src/applications/sample/wifi-iot/app/ljqtest1/: BUILD.gn  ljq1.c
hi3861/src/applications/sample/wifi-iot/app/our_demo4_3/: BUILD.gn  final_test.c  motor.c  motor.h
hi3861/src/applications/sample/wifi-iot/app/our_demoI4_15/: BUILD.gn  final_test.c  motor.c
hi3861/src/device/hisilicon/hispark_pegasus/sdk_liteos/: .sconsign.dblite
资料/1.0/: BUILD.gn  motor.h
资料/1.1/1.1/: ap_entry.c  ap_entry.h  motor.h  servo.c  ultrasonic.c
资料/3861-smart-home-kit-master/[附件]/[1]鸿蒙小车/小车控制程序/WindowsFormsApplication1/: WindowsFormsApplication1.sln
资料/3861-smart-home-kit-master/[附件]/[1]鸿蒙小车/小车控制程序/WindowsFormsApplication1/WindowsFormsApplication1/: Form1.Designer.cs  Form1.cs  WindowsFormsApplication1.csproj
资料/WindowsFormsApplication1/WindowsFormsApplication1/: CtrlJson.cs  Form1.Designer.cs  Form1.cs  WindowsFormsApplication1.csproj
资料/WindowsFormsApplication1/WindowsFormsApplication1/Properties/: AssemblyInfo.cs
资料/our_demoI4_15/: BUILD.gn  ap_entry.c  final_test copy.c  final_test.c  motor.h  udp_test.c
(+14 files in other folders)
