# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
#        "iothardware:led_example",
#        "helloworld:helloworld_demo",
#        "07_gpiobutton:button_example",
#        "ljqtest1:ljq1",
#        "hcsr04_demo:hcsr04_control",
#        "OurDemo1:4_2_OurDemo",
#        "our_demo4_3:4_3_OurDemo",
#        "our_demoI4_15:4_15_OurDemoI",
        "1.0:v1.0",
    ]
}
