# Copyright (C) 2020 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "{{kernel}}"

# Kernel version.
kernel_version = ""

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = ""

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toolchain.
board_toolchain = "{{board_toolchain_prefix}}gcc"

# The toolchain path installed, it's not mandatory if you have added toolchain path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "{{board_toolchain_prefix}}"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "{{board_toolchain_type}}"

# Board related common compile flags.
board_cflags = [
]
board_cxx_flags = board_cflags
board_ld_flags = []

# Board related headfiles search path.
board_include_dirs = [
]

# Board adapter dir for OHOS components.
board_adapter_dir = ""

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
