static_library("v1.1") {
  sources = [
    "hal_iot_gpio_ex.c",
    "ap_entry.c",
    "udp_test.c",
    "motor.c",
    "ultrasonic.c",
    "car_test.c",
    "servo.c",
    "final_test.c",
  ]

  include_dirs = [
    "./",
    "//utils/native/lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/include/base",
    "//kernel/liteos_m/components/cmsis/2.0",
    "//device/soc/hisilicon/hi3861v100/hi3861_adapter/hals/communication/wifi_lite/wifiservice",
    "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/third_party/lwip_sack/include",
    "//third_party/cJSON/",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    ]
}